--- a/calculator-app/package.json
+++ b/calculator-app/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18",
+    "sweetalert2": "^11.7.32",
+    "sweetalert2-react-content": "^5.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
