--- a/calculator-app/package.json
+++ b/calculator-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
